Support pom.xml for test coverage